2004-10-19  John W. Eaton  <jwe@octave.org>

	* Array.cc (assignN): Avoid resizing if assignment will fail.

2004-10-18  John W. Eaton  <jwe@octave.org>

	* Array.cc (assign2): Save result of squeeze operation.
	Squeeze if ndims is > 2, not if length of RHS vector is > 2.

2004-10-11  David Bateman <dbateman@free.fr>

	* oct-fftw.cc (class octave_fftw_planner): Add inplace[2] to
	flag whether transform in- or out-of-place.
	(octave_fftw_planner::octave_fftw_planner): Initialize it.
	(octave_fftw_planner::create_plan): Use it.

2004-09-24  John W. Eaton  <jwe@octave.org>

	* Array.cc (assign2, assignN): If index is empty, allow RHS to be
	any empty matrix, not just [].

2004-09-23  John W. Eaton  <jwe@octave.org>

	* mx-ops: Include scalar zero value in type definitions.
	Delete zero information from ops section.
	* mk-ops.awk: Use type-specific zero info.

	* mx-op-defs.h (MS_BOOL_OP, SM_BOOL_OP, MM_BOOL_OP, NDS_BOOL_OP,
	SND_BOOL_OP, NDND_BOOL_OP): Args now include zero values for both
	LHS and RHS.
	(MS_BOOL_OPS2, SM_BOOL_OPS2, MM_BOOL_OPS2, NDS_BOOL_OPS2,
	SND_BOOL_OPS2, NDND_BOOL_OPS2): New macros.
	(MS_BOOL_OPS, SM_BOOL_OPS, MM_BOOL_OPS, NDS_BOOL_OPS,
	SND_BOOL_OPS, NDND_BOOL_OPS): Define in terms of 2-zero versions.

	* idx-vector.h (idx_vector::idx_vector_rep::idx_vector_rep (const
	intNDArray<U>&)): Use explicit as_double () conversion in call to
	tree_to_mat_idx.

	* oct-inttypes.h (octave_int<T>::operator float): New conversion.
	(pow): Instead of "if (b_val)", use "if (b_val != zero)".
	Likewise for the "if (b_val & one)" test.
	(operator <<, operator >>): Type of retval is octave_int<T1>, not T1.

2004-09-23  David Bateman  <dbateman@free.fr>

	* oct-inttypes.h (OCTAVE_INT_DOUBLE_CMP_OP, OCTAVE_DOUBLE_INT_CMP_OP):
	New macros.  Use them to define mixed intX-double and double-intX ops.

2004-09-22  Federico Zenith  <zenith@chemeng.ntnu.no>

	* DASPK-opts.in, DASRT-opts.in, ODESSA-opts.in:
	Fix doc string layout to avoid overfull hbox in printed output.
